--- a/res/values/dimens.xml
+++ b/res/values/dimens.xml
@@ -19,6 +19,7 @@
     <dimen name="eight">8dp</dimen>
     <dimen name="radius_eight">8dp</dimen>
     <dimen name="standard_view_height">48dp</dimen>
+    <dimen name="map_icon_size">100dp</dimen>
 
     <dimen name="list_view_height">64dp</dimen>
 
