--- a/res/layout/frg_show_runs.xml
+++ b/res/layout/frg_show_runs.xml
@@ -54,7 +54,9 @@
 
 
                 <Button android:textStyle="bold" android:layout_marginRight="@dimen/four" android:textColor="@color/white_back"  android:id="@+id/buttonCloseIntervals" android:background="@drawable/close_button_selector" android:text="Close"  android:layout_weight="1" android:layout_width="0dp" android:layout_height="@dimen/standard_view_height"/>
-                <Button android:textStyle="bold"  android:id="@+id/buttonShowMap" android:textColor="@color/white_back" android:layout_weight="1" android:layout_width="0dp" android:layout_height="@dimen/standard_view_height" android:background="@drawable/plus_minus_selector" android:text="Map"/>
+                <Button android:textStyle="bold" android:layout_marginRight="@dimen/four"  android:id="@+id/buttonShowMap" android:textColor="@color/white_back" android:layout_weight="1" android:layout_width="0dp" android:layout_height="@dimen/standard_view_height" android:background="@drawable/plus_minus_selector" android:text="Map"/>
+
+                <Button android:paddingLeft="@dimen/four" android:drawableLeft="@drawable/share_32" android:textStyle="bold"  android:id="@+id/buttonShare" android:textColor="@color/white_back" android:layout_weight="1" android:layout_width="0dp" android:layout_height="@dimen/standard_view_height" android:background="@drawable/button_blue_selector" android:text="Share"/>
 
 
 
