--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -14,9 +14,9 @@
                 android:layout_width="fill_parent"
                 android:layout_height="0dp"
                 android:layout_weight="1"/>
-        <!--<include android:layout_width="fill_parent"-->
-                 <!--android:layout_height="wrap_content"-->
-                 <!--layout="@layout/bottom_buttons"/>-->
+        <include android:layout_width="fill_parent"
+                 android:layout_height="wrap_content"
+                 layout="@layout/bottom_buttons"/>
     </LinearLayout>
-    <include layout="@layout/drawer"/>
+    <!--<include layout="@layout/drawer"/>-->
 </android.support.v4.widget.DrawerLayout>
