--- a/res/layout/frg_plans.xml
+++ b/res/layout/frg_plans.xml
@@ -3,18 +3,29 @@
               android:orientation="vertical"
               android:layout_width="match_parent"
               android:background="@color/drawer_black"
-              android:layout_height="match_parent">
+              android:layout_height="match_parent"
+        android:padding="@dimen/margin10">
 
 
     <ListView android:id="@+id/plansList"
               android:layout_alignParentTop="true"
               android:layout_width="match_parent"
-              android:layout_height="match_parent"
+              android:layout_height="wrap_content"
               />
 
     <TextView android:id="@+id/noPlansText" android:textColor="@color/white_back" android:layout_centerInParent="true" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/no_plans" android:textSize="20dp" android:drawableBottom="@drawable/empty_100"/>
 
-
+    <Button
+            android:layout_width="fill_parent"
+            android:layout_height="@dimen/standard_view_height"
+            android:text="@string/new_plan"
+            android:textStyle="bold"
+            android:textSize="@dimen/large_text"
+            android:textColor="@color/white_back"
+            android:background="@drawable/close_button_selector"
+            android:id="@+id/buttonNewPlan"
+            android:layout_alignParentBottom="true"
+            />
 
 
 </RelativeLayout>
