--- a/res/layout/activity_interval.xml
+++ b/res/layout/activity_interval.xml
@@ -320,5 +320,13 @@
 
         </RelativeLayout>
 
+    <RelativeLayout android:layout_width="match_parent" android:layout_height="match_parent">
+
+        <ProgressBar android:layout_width="@dimen/standard_view_height"
+                     android:layout_height="@dimen/standard_view_height"
+                android:layout_centerInParent="true"/>
+
+    </RelativeLayout>
+
     </ViewFlipper>
 
