progress bars working

--- a/res/layout/frg_show_runs.xml
+++ b/res/layout/frg_show_runs.xml
@@ -121,7 +121,10 @@
     </com.kostas.onlineHelp.MapWrapperLayout>
 
     <RelativeLayout android:layout_width="match_parent" android:layout_height="match_parent">
-        <TextView android:id="@+id/noRunsText" android:textColor="@color/white_back" android:layout_centerInParent="true"  android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/no_runs" android:textSize="20dp" android:drawableBottom="@drawable/empty_100"/>
+        <TextView android:id="@+id/noRunsText" android:textColor="@color/white_back"
+                  android:layout_centerInParent="true"  android:layout_width="wrap_content"
+                  android:layout_height="wrap_content" android:text="@string/no_runs" android:textSize="20sp"
+                  android:drawableBottom="@drawable/empty_100"/>
 
     </RelativeLayout>
 
