--- a/res/layout/frg_plans.xml
+++ b/res/layout/frg_plans.xml
@@ -1,21 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ViewSwitcher xmlns:android="http://schemas.android.com/apk/res/android"
+<ViewFlipper xmlns:android="http://schemas.android.com/apk/res/android"
               xmlns:app="http://schemas.android.com/apk/res/com.kostas.onlineHelp"
-              android:id="@+id/plansSwitcher"
+              android:id="@+id/plansFlipper"
               android:orientation="vertical"
               android:layout_width="match_parent"
               android:background="@color/drawer_black"
               android:layout_height="match_parent"
        >
 
-<RelativeLayout android:layout_width="match_parent" android:layout_height="match_parent">
+    <RelativeLayout android:layout_width="match_parent" android:layout_height="match_parent">
+
+    <ProgressBar android:layout_width="@dimen/standard_view_height"
+                 android:layout_height="@dimen/standard_view_height"
+                 android:layout_centerInParent="true"/>
+    </RelativeLayout>
+
+    <RelativeLayout android:layout_width="match_parent" android:layout_height="match_parent">
     <ListView android:id="@+id/plansList"
               android:layout_alignParentTop="true"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               />
 
-    <TextView android:id="@+id/noPlansText" android:textColor="@color/white_back" android:layout_centerInParent="true" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/no_plans" android:textSize="20dp" android:drawableBottom="@drawable/empty_100"/>
 
     <Button
             android:layout_margin="@dimen/margin10"
@@ -131,5 +137,15 @@
 
     </RelativeLayout>
 
+    <RelativeLayout android:layout_width="match_parent" android:layout_height="match_parent">
+        <TextView android:id="@+id/noPlansText"
+                  android:textColor="@color/white_back"
+                  android:layout_centerInParent="true"
+                  android:layout_width="wrap_content"
+                  android:layout_height="wrap_content"
+                  android:text="@string/no_plans"
+                  android:textSize="20sp"
+                  android:drawableBottom="@drawable/empty_100"/>
+    </RelativeLayout>
 
-</ViewSwitcher>
+</ViewFlipper>
