--- a/res/drawable/inactive_button.xml
+++ b/res/drawable/inactive_button.xml
@@ -4,7 +4,7 @@
     <item>
         <shape android:shape="rectangle"  >
             <corners android:radius="@dimen/radius_eight" />
-            <solid android:color="@color/drawer_grey"/>
+            <solid android:color="@color/semitrans_green"/>
         </shape>
 
     </item>
