--- a/res/layout/frg_show_runs.xml
+++ b/res/layout/frg_show_runs.xml
@@ -60,10 +60,10 @@
             <LinearLayout android:baselineAligned="false" android:id="@+id/intervalsButtons" android:layout_alignParentBottom="true" android:layout_width="fill_parent" android:layout_height="wrap_content"  android:padding="@dimen/eight">
 
 
-                <Button android:textStyle="bold" android:layout_marginRight="@dimen/four" android:textColor="@color/white_back"  android:id="@+id/buttonCloseIntervals" android:background="@drawable/close_button_selector" android:text="Close"  android:layout_weight="1" android:layout_width="0dp" android:layout_height="@dimen/standard_view_height"/>
-                <Button android:textStyle="bold" android:layout_marginRight="@dimen/four"  android:id="@+id/buttonShowMap" android:textColor="@color/white_back" android:layout_weight="1" android:layout_width="0dp" android:layout_height="@dimen/standard_view_height" android:background="@drawable/plus_minus_selector" android:text="Map"/>
+                <Button android:textStyle="bold" android:layout_marginRight="@dimen/eight" android:textColor="@color/white_back"  android:id="@+id/buttonCloseIntervals" android:background="@drawable/close_button_selector" android:text="Close"  android:layout_weight="1" android:layout_width="0dp" android:layout_height="@dimen/standard_view_height"/>
+                <Button android:textStyle="bold"   android:id="@+id/buttonShowMap" android:textColor="@color/white_back" android:layout_weight="1" android:layout_width="0dp" android:layout_height="@dimen/standard_view_height" android:background="@drawable/plus_minus_selector" android:text="Map"/>
 
-                <Button android:paddingLeft="@dimen/four" android:drawableLeft="@drawable/share_32" android:textStyle="bold"  android:id="@+id/buttonShare" android:textColor="@color/white_back" android:layout_weight="1" android:layout_width="0dp" android:layout_height="@dimen/standard_view_height" android:background="@drawable/button_blue_selector" android:text="Share"/>
+                <!--<Button android:paddingLeft="@dimen/four" android:drawableLeft="@drawable/share_32" android:textStyle="bold"  android:id="@+id/buttonShare" android:textColor="@color/white_back" android:layout_weight="1" android:layout_width="0dp" android:layout_height="@dimen/standard_view_height" android:background="@drawable/button_blue_selector" android:text="Share"/>-->
 
 
 
@@ -71,6 +71,10 @@
 
 
         </RelativeLayout>
+
+
+
+
 
         <com.kostas.onlineHelp.MapWrapperLayout
             android:id="@+id/mapWrapperRuns"
@@ -90,17 +94,34 @@
             android:layout_height="match_parent"
 
             />
+            <RelativeLayout android:gravity="center|top"
+                            android:background="@drawable/inactive_button"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                    android:padding="@dimen/eight"
+                    android:layout_margin="@dimen/twenty"
+                    >
 
-            <TextView
-                    android:layout_margin="@dimen/margin10"
-                    android:text="@string/click"
-                    android:singleLine="true"
-                    android:gravity="center"
-                    android:textColor="@color/white_back"
-                    android:layout_width="match_parent"
-                    android:background="@drawable/inactive_button"
-                    android:layout_gravity="top|center"
-                    android:layout_height="@dimen/standard_view_height"/>
+                <TextView android:textStyle="bold" android:textSize="@dimen/medium_text" android:gravity="top|start" android:id="@+id/mapIntervalDistanceText" android:textColor="@color/white_back" android:layout_width="match_parent" android:layout_height="wrap_content" />
+                <TextView android:textStyle="bold" android:textSize="@dimen/medium_text" android:gravity="top|end" android:id="@+id/mapIntervalTimeText" android:textColor="@color/white_back" android:layout_width="match_parent" android:layout_height="wrap_content"/>
+                <TextView android:textStyle="bold" android:textSize="@dimen/medium_text" android:layout_below="@+id/mapIntervalDistanceText" android:gravity="bottom|start" android:id="@+id/mapIntervalRoundsText" android:textColor="@color/white_back" android:layout_width="match_parent" android:layout_height="wrap_content" />
+                <TextView android:textStyle="bold" android:textSize="@dimen/medium_text" android:layout_below="@id/mapIntervalTimeText" android:gravity="bottom|end" android:id="@+id/mapIntervalFastestText" android:textColor="@color/white_back" android:layout_width="match_parent" android:layout_height="wrap_content" />
+
+
+
+            </RelativeLayout>
+
+
+            <!--<TextView-->
+                    <!--android:layout_margin="@dimen/margin10"-->
+                    <!--android:text="@string/click"-->
+                    <!--android:singleLine="true"-->
+                    <!--android:gravity="center"-->
+                    <!--android:textColor="@color/white_back"-->
+                    <!--android:layout_width="match_parent"-->
+                    <!--android:background="@drawable/inactive_button"-->
+                    <!--android:layout_gravity="top|center"-->
+                    <!--android:layout_height="@dimen/standard_view_height"/>-->
 
             <ImageButton
                     android:layout_margin="15dp"
@@ -119,6 +140,7 @@
         </FrameLayout>
 
     </com.kostas.onlineHelp.MapWrapperLayout>
+
 
     <RelativeLayout android:layout_width="match_parent" android:layout_height="match_parent">
         <TextView android:id="@+id/noRunsText" android:textColor="@color/white_back"
