progress bars fixed

--- a/res/layout/bottom_buttons.xml
+++ b/res/layout/bottom_buttons.xml
@@ -4,7 +4,8 @@
               android:id="@+id/bottomButtons"
               android:orientation="vertical"
               android:layout_width="match_parent"
-              android:layout_height="match_parent">
+              android:layout_height="match_parent"
+        android:background="@android:color/transparent">
 
     <LinearLayout
             android:layout_width="fill_parent"
