anim folder with slide, some buttons from global to local

--- a/res/drawable/bottom_button_pressed.xml
+++ b/res/drawable/bottom_button_pressed.xml
@@ -2,7 +2,7 @@
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
     <item>
         <shape android:shape="rectangle">
-            <solid android:color="@color/white_back" />
+            <solid android:color="@color/dark_grey_button_selector_color" />
             <corners
                     android:bottomLeftRadius="4dp"
                     android:bottomRightRadius="4dp"
@@ -11,10 +11,10 @@
         </shape>
     </item>
     <item
-            android:bottom="1dp"
-            android:left="1dp"
-            android:right="1dp"
-            android:top="1dp">
+            android:bottom="2dp"
+            android:left="2dp"
+            android:right="2dp"
+            android:top="2dp">
         <shape android:shape="rectangle">
             <solid android:color="@color/interval_green_pressed" />
             <corners
