--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -1,13 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v4.widget.DrawerLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        android:id="@+id/drawer_layout"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
+<!--<android.support.v4.widget.DrawerLayout-->
+        <!--xmlns:android="http://schemas.android.com/apk/res/android"-->
+        <!--android:id="@+id/drawer_layout"-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="match_parent">-->
     <LinearLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
             android:orientation="vertical"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"
+       >
 
         <com.kostas.onlineHelp.NonSwipeableViewPager
                 android:id="@+id/pager"
@@ -15,8 +17,8 @@
                 android:layout_height="0dp"
                 android:layout_weight="1"/>
         <include android:layout_width="fill_parent"
-                 android:layout_height="wrap_content"
+                 android:layout_height="@dimen/bottom_buttons_height"
                  layout="@layout/bottom_buttons"/>
     </LinearLayout>
     <!--<include layout="@layout/drawer"/>-->
-</android.support.v4.widget.DrawerLayout>
+<!--</android.support.v4.widget.DrawerLayout>-->
