--- a/res/values/colors.xml
+++ b/res/values/colors.xml
@@ -23,8 +23,8 @@
     <color name="white_back">#f6f5f5</color>
     <color name="dark_grey_button_selector_color">#666666</color>
     <color name="pressed_background_stores">#00869e</color>
-    <color name="interval_green">#27ae60</color>
-    <color name="interval_green_pressed">#2ecc71</color>
+    <color name="interval_green">#2ecc71</color>
+    <color name="interval_green_pressed">#27ae60</color>
     <color name="interval_red">#c0392b</color>
     <color name="interval_red_pressed">#e74c3c</color>
     <color name="interval_blue">#2980b9</color>
