--- a/res/layout/bottom_buttons.xml
+++ b/res/layout/bottom_buttons.xml
@@ -5,11 +5,16 @@
               android:orientation="vertical"
               android:layout_width="match_parent"
               android:layout_height="match_parent"
-        android:background="@android:color/transparent">
+
+android:background="@color/drawer_black"
+
+
+       >
 
     <LinearLayout
+
             android:layout_width="fill_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="match_parent">
         <LinearLayout
                 android:id="@+id/btn_my_runs"
                 style="@style/BottomTab">
@@ -17,7 +22,7 @@
                     android:src="@drawable/diary_32"
                     style="@style/BottomTabImage"/>
             <TextView
-                    android:text="Diary"
+                    android:text="@string/diary"
                     style="@style/BottomTabText"/>
         </LinearLayout>
         <LinearLayout
@@ -27,7 +32,7 @@
                     android:src="@drawable/plan_32"
                     style="@style/BottomTabImage"/>
             <TextView
-                    android:text="Plans"
+                    android:text="@string/plans"
                     style="@style/BottomTabText"/>
         </LinearLayout>
 
@@ -38,7 +43,7 @@
                     android:src="@drawable/interval_32"
                     style="@style/BottomTabImage"/>
             <TextView
-                    android:text="Run"
+                    android:text="@string/run"
                     style="@style/BottomTabText"/>
         </LinearLayout>
 
