--- a/res/values/dimens.xml
+++ b/res/values/dimens.xml
@@ -22,5 +22,6 @@
     <dimen name="map_icon_size">100dp</dimen>
 
     <dimen name="list_view_height">64dp</dimen>
+    <dimen name="bottom_buttons_height">64dp</dimen>
 
 </resources>
