--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -4,17 +4,18 @@
     <!-- the theme applied to the application or activity -->
     <style name="CustomIntervalTheme"
            parent="@android:style/Theme.Holo.Light">
+        <item name="android:background">@android:color/transparent</item>
         <item name="android:typeface">monospace</item>
         <item name="android:windowActionBar">false</item>
         <item name="android:windowNoTitle">true</item>
     </style>
 
-    <style name="MyActionBar.Text" parent="@android:style/TextAppearance.Holo.Widget.ActionBar.Title">
+    <!--<style name="MyActionBar.Text" parent="@android:style/TextAppearance.Holo.Widget.ActionBar.Title">-->
 
-        <item name="android:textColor">@color/white_back</item>
-        <item name="android:textStyle">bold</item>
-        <item name="android:layout_width">match_parent</item>
-    </style>
+        <!--<item name="android:textColor">@color/white_back</item>-->
+        <!--<item name="android:textStyle">bold</item>-->
+        <!--<item name="android:layout_width">match_parent</item>-->
+    <!--</style>-->
 
 
 
@@ -32,7 +33,7 @@
         <item name="android:layout_weight">1</item>
         <item name="android:background">@drawable/bottom_button_background</item>
         <item name="android:layout_width">wrap_content</item>
-        <item name="android:layout_height">50dp</item>
+        <item name="android:layout_height">match_parent</item>
         <item name="android:orientation">vertical</item>
     </style>
 
@@ -43,12 +44,12 @@
         <item name="android:layout_width">match_parent</item>
     </style>
 
-    <style name="BottomTabImage.home">
-        <item name="android:layout_margin">11dp</item>
-    </style>
+    <!--<style name="BottomTabImage.home">-->
+        <!--<item name="android:layout_margin">11dp</item>-->
+    <!--</style>-->
 
     <style name="BottomTabText">
-        <item name="android:textColor">@android:color/white</item>
+        <item name="android:textColor">@color/white_back</item>
         <item name="android:layout_weight">0.5</item>
         <item name="android:gravity">center</item>
         <item name="android:layout_width">match_parent</item>
