--- a/res/layout/activity_interval.xml
+++ b/res/layout/activity_interval.xml
@@ -111,9 +111,9 @@
             <LinearLayout android:layout_width="match_parent" android:layout_below="@+id/spinner_and_save"
                           android:layout_height="@dimen/standard_view_height">
 
-            <CheckBox android:paddingLeft="@dimen/margin10" android:layout_weight="1" android:layout_marginRight="@dimen/eight" android:background="@drawable/checkbox_selector" android:button="@drawable/checkbox_sound_design" android:textColor="@color/white_back" android:id="@+id/checkbox_sound" android:layout_width="0dp" android:layout_height="fill_parent" android:text="@string/sound"/>
+            <CheckBox android:gravity="center"  android:paddingLeft="@dimen/margin10" android:paddingRight="0dp" android:layout_weight="1" android:layout_marginRight="@dimen/eight" android:background="@drawable/checkbox_selector" android:button="@drawable/checkbox_sound_design" android:textColor="@color/white_back" android:id="@+id/checkbox_sound" android:layout_width="0dp" android:layout_height="fill_parent" android:text="@string/sound"/>
 
-            <CheckBox android:paddingLeft="@dimen/margin10" android:layout_weight="1" android:background="@drawable/checkbox_selector" android:button="@drawable/checkbox_vibrate_design" android:textColor="@color/white_back" android:id="@+id/checkbox_vibration" android:layout_width="0dp" android:layout_height="fill_parent" android:text="@string/vibrate"/>
+            <CheckBox android:gravity="center" android:paddingLeft="@dimen/margin10" android:layout_weight="1" android:background="@drawable/checkbox_selector" android:button="@drawable/checkbox_vibrate_design" android:textColor="@color/white_back" android:id="@+id/checkbox_vibration" android:layout_width="0dp" android:layout_height="fill_parent" android:text="@string/vibrate"/>
             </LinearLayout>
 
             <com.google.android.gms.ads.AdView
